playbooks/argocd/apps/lazylibrarian/deployment.yaml
# playbooks/argocd/apps/lazylibrarian/deployment.yaml
# Adds seed-config init container, mounts /config PVC and /template ConfigMap

apiVersion: apps/v1
kind: Deployment
metadata:
  name: lazylibrarian
  namespace: media
  labels:
    app: lazylibrarian
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: lazylibrarian
  template:
    metadata:
      labels:
        app: lazylibrarian
    spec:
      containers:
        - name: lazylibrarian
          image: linuxserver/lazylibrarian:2a1de5d7-ls170
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5299
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads-shared
              mountPath: /downloads
            - name: books-library
              mountPath: /books
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lazylibrarian-config
        - name: config-template
          configMap:
            name: lazylibrarian-initial-config
        - name: downloads-shared
          persistentVolumeClaim:
            claimName: qbittorrent-downloads
        - name: books-library
          persistentVolumeClaim:
            claimName: lazylibrarian-books
